# rangeset

./: ChangeLog.md  README.md  cabal.project  range-set.cabal  rangeset.cabal
.github/workflows/: ci.yaml
benchmarks/: BenchmarkUtils.hs  ComplexityBench.hs  ContiguityBench.hs  RangeSetBench.hs
benchmarks/Data/: EnumSet.hs  Patricia.hs
src/ghc-8.6+/Data/RangeSet/Internal/: Types.hs
src/ghc-9.2+/Data/RangeSet/Internal/: Types.hs
src/ghc/Data/: RangeSet.hs
src/ghc/Data/RangeSet/: Builders.hs  Internal.hs  Primitives.hs  SetCrossSet.hs
src/ghc/Data/RangeSet/Internal/: Enum.hs  Extractors.hs  Heuristics.hs  Inserters.hs  Lumpers.hs  SmartConstructors.hs  Splitters.hs  TestingUtils.hs  Types.hs  Unsafe.hs
test/: RangeSet.hs
